--- a/src/GUI/Views/DocumentationView.fxml
+++ b/src/GUI/Views/DocumentationView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPaneCEO" prefHeight="606.0" prefWidth="1321.0" styleClass="root" stylesheets="@../Css/DocumentationViewCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.DocumentationViewController">
+<BorderPane fx:id="borderPaneCEO" prefHeight="712.0" prefWidth="1321.0" styleClass="root" stylesheets="@../Css/DocumentationViewCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.DocumentationViewController">
    <left>
       <Pane prefHeight="606.0" prefWidth="204.0" BorderPane.alignment="CENTER">
          <children>
@@ -23,8 +23,8 @@
                   <Image url="@../Images/WUAV.png" />
                </image>
             </ImageView>
-            <Button fx:id="btnReturn" layoutX="27.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleReturn" prefHeight="30.0" prefWidth="150.0" text="Return" />
-            <Button fx:id="btnSaveToDevice" layoutX="27.0" layoutY="489.0" mnemonicParsing="false" onAction="#handleSaveToDevice" prefHeight="30.0" prefWidth="150.0" text="Save to this Device" />
+            <Button fx:id="btnReturn" layoutX="27.0" layoutY="620.0" mnemonicParsing="false" onAction="#handleReturn" prefHeight="30.0" prefWidth="150.0" text="Return" />
+            <Button fx:id="btnSaveToDevice" layoutX="27.0" layoutY="574.0" mnemonicParsing="false" onAction="#handleSaveToDevice" prefHeight="30.0" prefWidth="150.0" text="Save to this Device" />
             <Button fx:id="btnSend" layoutX="27.0" layoutY="227.0" mnemonicParsing="false" onAction="#handleSendToPMOrTech" prefHeight="30.0" prefWidth="150.0" text="Send to Project Manager" />
             <Button fx:id="btnSave" layoutX="27.0" layoutY="187.0" mnemonicParsing="false" onAction="#handleSave" prefHeight="30.0" prefWidth="150.0" text="Save" />
             <Button fx:id="btnOpenPaint" layoutX="27.0" layoutY="265.0" mnemonicParsing="false" onAction="#handleOpenPaint" prefHeight="30.0" prefWidth="150.0" text="Open Paint" />
@@ -33,26 +33,27 @@
       </Pane>
    </left>
    <center>
-      <AnchorPane prefHeight="606.0" prefWidth="714.0" styleClass="anchor-pane" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="634.0" prefWidth="1111.0" styleClass="anchor-pane" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnAddImage" layoutX="268.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Image" AnchorPane.leftAnchor="268.0" AnchorPane.topAnchor="543.0" />
-            <Button fx:id="btnAddDevice" layoutX="448.0" layoutY="543.0" mnemonicParsing="false" onAction="#handleAddDevice" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Device" AnchorPane.leftAnchor="448.0" AnchorPane.topAnchor="543.0" />
-            <Button fx:id="btnRemove" layoutX="621.0" layoutY="543.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Remove" AnchorPane.leftAnchor="621.0" AnchorPane.topAnchor="543.0" />
+            <Button fx:id="btnAddImage" layoutX="286.0" layoutY="646.0" mnemonicParsing="false" onAction="#handleAddImage" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Image" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="286.0" />
+            <Button fx:id="btnAddDevice" layoutX="451.0" layoutY="646.0" mnemonicParsing="false" onAction="#handleAddDevice" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Add Device" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="451.0" />
+            <Button fx:id="btnRemove" layoutX="624.0" layoutY="646.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="140.0" styleClass="buttonothertext" text="Remove" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="624.0" />
             <TextField fx:id="txtCostumerName" layoutX="39.0" layoutY="54.0" promptText="Costumer Name" AnchorPane.leftAnchor="39.0" AnchorPane.topAnchor="54.0" />
             <TextField fx:id="txtAddress" layoutX="205.0" layoutY="54.0" promptText="Address" AnchorPane.leftAnchor="205.0" AnchorPane.topAnchor="54.0" />
             <TextField fx:id="txtZipCode" layoutX="367.0" layoutY="54.0" promptText="Zip-code" AnchorPane.leftAnchor="367.0" AnchorPane.topAnchor="54.0" />
             <TextField fx:id="txtCostumerType" layoutX="36.0" layoutY="90.0" prefHeight="37.0" prefWidth="153.0" promptText="Costumer type" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="90.0" />
             <MenuButton fx:id="menuTypes" layoutX="190.0" layoutY="89.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="32.0" text="Types" AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="90.0" />
-            <TextArea fx:id="txtaComments" layoutX="36.0" layoutY="133.0" prefHeight="208.0" prefWidth="478.0" promptText="Comments/Documentation" wrapText="true" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="133.0" />
-            <ListView fx:id="lvImages" layoutX="661.0" layoutY="75.0" prefHeight="200.0" prefWidth="422.0" AnchorPane.leftAnchor="661.0" AnchorPane.topAnchor="75.0" />
-            <ListView fx:id="lvDevices" layoutX="661.0" layoutY="316.0" prefHeight="200.0" prefWidth="424.0" AnchorPane.leftAnchor="661.0" AnchorPane.topAnchor="316.0" />
+            <TextArea fx:id="txtaComments" layoutX="36.0" layoutY="133.0" prefHeight="287.0" prefWidth="478.0" promptText="Comments/Documentation" wrapText="true" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="133.0" />
+            <ListView fx:id="lvImages" layoutX="661.0" layoutY="75.0" prefHeight="116.0" prefWidth="422.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="75.0" />
+            <ListView fx:id="lvDevices" layoutX="664.0" layoutY="419.0" prefHeight="200.0" prefWidth="424.0" AnchorPane.bottomAnchor="87.0" AnchorPane.rightAnchor="28.0" />
             <Label layoutX="661.0" layoutY="55.0" prefHeight="18.0" prefWidth="76.0" text="Images:" AnchorPane.leftAnchor="661.0" AnchorPane.topAnchor="55.0" />
-            <Label layoutX="661.0" layoutY="294.0" text="Devices:" AnchorPane.leftAnchor="661.0" AnchorPane.topAnchor="294.0" />
+            <Label layoutX="664.0" layoutY="397.0" text="Devices:" AnchorPane.leftAnchor="664.0" AnchorPane.topAnchor="397.0" />
             <TextField fx:id="txtLocation" layoutX="262.0" layoutY="95.0" promptText="Location" AnchorPane.leftAnchor="262.0" AnchorPane.topAnchor="95.0" />
             <DatePicker fx:id="dpDatePicker" layoutX="443.0" layoutY="93.0" promptText="Date" AnchorPane.leftAnchor="443.0" AnchorPane.topAnchor="93.0" />
-            <ListView fx:id="lvTechniciansOnProject" layoutX="36.0" layoutY="379.0" prefHeight="137.0" prefWidth="478.0" AnchorPane.leftAnchor="36.0" />
-            <Text fx:id="txtTech" layoutX="36.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Technicians on Project:" wrappingWidth="197.53668212890625" />
-            <Button fx:id="btnRemoveTechnician" layoutX="36.0" layoutY="518.0" mnemonicParsing="false" onAction="#handleRemoveTechnician" text="Remove Technician" />
+            <ListView fx:id="lvTechniciansOnProject" layoutX="39.0" layoutY="482.0" prefHeight="137.0" prefWidth="478.0" AnchorPane.bottomAnchor="87.0" AnchorPane.leftAnchor="39.0" />
+            <Text fx:id="txtTech" layoutX="39.0" layoutY="467.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Technicians on Project:" wrappingWidth="197.53668212890625" AnchorPane.bottomAnchor="235.0" AnchorPane.leftAnchor="39.0" />
+            <Button fx:id="btnRemoveTechnician" layoutX="39.0" layoutY="621.0" mnemonicParsing="false" onAction="#handleRemoveTechnician" text="Remove Technician" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="39.0" />
+            <ImageView fx:id="imImageView" fitHeight="201.0" fitWidth="423.0" layoutX="660.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="191.0" />
          </children>
       </AnchorPane>
    </center>
