--- a/src/GUI/Css/CEOViewCss.css
+++ b/src/GUI/Css/CEOViewCss.css
@@ -77,3 +77,11 @@
 {
     -fx-background-color: #ECF2F7;
 }
+
+.menu-button
+{
+    -fx-background-color: transparent;
+    -fx-text-fill: #393939;
+    -fx-border-color: #444444;
+    -fx-border-radius:5px;
+}
