--- a/src/GUI/Views/CEOView.fxml
+++ b/src/GUI/Views/CEOView.fxml
@@ -50,7 +50,7 @@
                   <TableColumn fx:id="clmINSDate" minWidth="0.0" prefWidth="137.0" resizable="false" text="Date" />
                </columns>
             </TableView>
-            <TextField fx:id="txfSearch" layoutX="369.0" layoutY="94.0" onKeyPressed="#searchOnButtonPress" promptText="Search" />
+            <TextField fx:id="txfSearch" layoutX="363.0" layoutY="94.0" onKeyPressed="#searchOnButtonPress" promptText="Search" />
             <MenuButton fx:id="btnSearchChoice" layoutX="518.0" layoutY="94.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="All">
               <items>
                 <MenuItem fx:id="miName" mnemonicParsing="false" onAction="#handleNameChoice" text="Name" />
@@ -59,7 +59,7 @@
               </items>
             </MenuButton>
             <Text fx:id="txtSearchText" layoutX="518.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search for:" wrappingWidth="76.109375" />
-            <Button fx:id="btnSearch" layoutX="613.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleSearch" prefHeight="25.0" prefWidth="96.0" text="Search" AnchorPane.rightAnchor="51.0" />
+            <Button fx:id="btnSearch" layoutX="533.4" layoutY="93.0" mnemonicParsing="false" onAction="#handleSearch" prefHeight="26.0" prefWidth="43.0" AnchorPane.rightAnchor="89.0" />
          </children>
       </AnchorPane>
    </center>
