--- a/src/GUI/Views/PaintAppView.fxml
+++ b/src/GUI/Views/PaintAppView.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
@@ -14,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <?import BE.CanvasPane?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="923.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.PaintAppViewController" stylesheets="@../Css/PaintCss.Css" styleClass="root">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="923.0" styleClass="root" stylesheets="@../Css/PaintCss.Css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.PaintAppViewController">
    <top>
       <AnchorPane prefHeight="38.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -33,7 +31,7 @@
                   <ColorPicker fx:id="CpColorPicker" GridPane.columnIndex="2" />
                </children>
             </GridPane>
-            <Button fx:id="btnSave" layoutX="28.0" layoutY="7.0" mnemonicParsing="false" AnchorPane.leftAnchor="28.0" AnchorPane.topAnchor="6.0" onAction="#handleSave" />
+            <Button fx:id="btnSave" layoutX="28.0" layoutY="7.0" mnemonicParsing="false" onAction="#handleSave" AnchorPane.leftAnchor="28.0" AnchorPane.topAnchor="6.0" />
             <Button fx:id="btnClose" layoutX="560.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleClose" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="6.0" />
             <Button fx:id="btnNewCanvas" layoutX="76.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleNewCanvas" text="New Canvas" AnchorPane.leftAnchor="76.0" AnchorPane.topAnchor="6.0" />
             <Button fx:id="btnScreenSize" layoutX="829.0" layoutY="7.0" mnemonicParsing="false" onAction="#handleScreenSize" AnchorPane.rightAnchor="78.20000000000005" AnchorPane.topAnchor="6.0" />
@@ -43,13 +41,18 @@
    <left>
       <AnchorPane prefHeight="362.0" prefWidth="62.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane layoutY="154.0" prefHeight="61.0" prefWidth="81.0">
+            <GridPane layoutY="154.0" prefHeight="166.0" prefWidth="82.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Button fx:id="btnBrush" mnemonicParsing="false" onAction="#handleBrush">
@@ -58,6 +61,31 @@
                      </GridPane.margin>
                   </Button>
                   <Button fx:id="btnErase" mnemonicParsing="false" onAction="#handleErase" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="32.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnSpeaker" mnemonicParsing="false" GridPane.rowIndex="2" onAction="#handleSpeaker">
+                     <GridPane.margin>
+                        <Insets left="32.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnWifi" mnemonicParsing="false" GridPane.rowIndex="3" onAction="#handleWifi">
+                     <GridPane.margin>
+                        <Insets left="32.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnCC" mnemonicParsing="false" GridPane.rowIndex="4" onAction="#handleControlCenter">
+                     <GridPane.margin>
+                        <Insets left="32.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnProjcetor" mnemonicParsing="false" GridPane.rowIndex="5" onAction="#handleProjcetor">
+                     <GridPane.margin>
+                        <Insets left="32.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnAmp" mnemonicParsing="false" GridPane.rowIndex="6" onAction="#handleAmp">
                      <GridPane.margin>
                         <Insets left="32.0" />
                      </GridPane.margin>
