--- a/src/GUI/Views/UserInfoView.fxml
+++ b/src/GUI/Views/UserInfoView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPaneUserInfo" onMouseClicked="#dragScreen" prefHeight="500.0" prefWidth="804.0" styleClass="border-pane" stylesheets="@../Css/CEOViewCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.UserInfoController">
+<BorderPane fx:id="borderPaneUserInfo" onMouseClicked="#dragScreen" prefHeight="500.0" prefWidth="804.0" styleClass="root" stylesheets="@../Css/UserInfoCss.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.UserInfoController">
     <bottom>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0" BorderPane.alignment="CENTER">
             <BorderPane.margin>
@@ -61,18 +61,18 @@
         <AnchorPane prefHeight="250.0" prefWidth="737.0" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="txtfUsername" layoutX="49.0" layoutY="101.0" />
-            <Text layoutX="52.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username:" wrappingWidth="142.13671875" />
+            <Text layoutX="52.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Username:" wrappingWidth="142.13671875" />
             <TextField fx:id="txtfPassword" layoutX="49.0" layoutY="185.0" />
-            <Text layoutX="52.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" wrappingWidth="142.13671875" />
+            <Text layoutX="52.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Password:" wrappingWidth="142.13671875" />
             <TextField fx:id="txtfMail" layoutX="266.0" layoutY="101.0" />
-            <Text layoutX="269.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mail:" wrappingWidth="142.13671875" />
+            <Text layoutX="269.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Mail:" wrappingWidth="142.13671875" />
             <TextField fx:id="txtfName" layoutX="266.0" layoutY="185.0" />
-            <Text layoutX="269.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" wrappingWidth="142.13671875" />
+            <Text layoutX="269.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Name:" wrappingWidth="142.13671875" />
             <TextField fx:id="txtfUserId" layoutX="448.0" layoutY="185.0" />
-            <Text fx:id="txtUserId" layoutX="451.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="UserId:" wrappingWidth="142.13671875" />
-            <MenuBar layoutX="597.0" layoutY="99.0" prefHeight="25.0" prefWidth="181.0">
+            <Text fx:id="txtUserId" layoutX="451.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="UserId:" wrappingWidth="142.13671875" />
+            <MenuBar layoutX="606.0" layoutY="98.0" prefHeight="25.0" prefWidth="181.0">
               <menus>
-                <Menu fx:id="mAccessLevel" mnemonicParsing="false" text="Change Access Level">
+                <Menu fx:id="mAccessLevel" mnemonicParsing="false" styleClass="menu-button" text="Change Access Level">
                   <items>
                     <MenuItem fx:id="menuItemCEO" mnemonicParsing="false" onAction="#handleMenuItemCEO" text="CEO" />
                         <MenuItem fx:id="menuItemProjectManager" mnemonicParsing="false" onAction="#handleMenuItemProjectManager" text="ProjectManager" />
@@ -83,7 +83,7 @@
               </menus>
             </MenuBar>
             <TextField fx:id="txtfAcceslevel" layoutX="448.0" layoutY="101.0" />
-            <Text layoutX="448.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Access Level:" wrappingWidth="88.333984375" />
+            <Text layoutX="448.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Access Level:" wrappingWidth="140.333984375" />
          </children>
         </AnchorPane>
     </center>
