--- a/src/GUI/Views/CEOView.fxml
+++ b/src/GUI/Views/CEOView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
@@ -24,7 +25,8 @@
             </ImageView>
             <Button fx:id="btnLogout" layoutX="33.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleLogout" prefHeight="30.0" prefWidth="140.0" text="Logout" />
             <Button fx:id="btnshowInstallations" layoutX="33.0" layoutY="273.0" mnemonicParsing="false" onAction="#handleShowInstallations" prefHeight="30.0" prefWidth="140.0" text="Installations" />
-            <Button fx:id="btnShowUsers" layoutX="33.0" layoutY="185.0" mnemonicParsing="false" onAction="#handleShowUsers" prefHeight="30.0" prefWidth="140.0" text="Users" />
+            <Button fx:id="btnShowUsers" layoutX="33.0" layoutY="203.0" mnemonicParsing="false" onAction="#handleShowUsers" prefHeight="30.0" prefWidth="140.0" text="Users" />
+            <Label fx:id="lblLoggedInAs" layoutX="43.0" layoutY="162.0" prefHeight="23.0" prefWidth="119.0" />
          </children>
       </Pane>
    </left>
