--- a/src/GUI/Views/SalesPersonView.fxml
+++ b/src/GUI/Views/SalesPersonView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
@@ -23,6 +24,7 @@
                </image>
             </ImageView>
             <Button fx:id="btnLogout" layoutX="33.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleLogout" prefHeight="30.0" prefWidth="140.0" text="Logout" />
+            <Label fx:id="lblLoggedInAs" layoutX="22.0" layoutY="166.0" prefHeight="51.0" prefWidth="160.0" styleClass="label-User" text="SalesPerson:" textAlignment="CENTER" wrapText="true" />
          </children>
       </Pane>
    </left>
