--- a/src/GUI/Views/PaintAppView.fxml
+++ b/src/GUI/Views/PaintAppView.fxml
@@ -18,16 +18,16 @@
          <children>
             <GridPane alignment="TOP_CENTER" layoutX="282.0" layoutY="8.0" prefHeight="22.0" prefWidth="340.0" AnchorPane.leftAnchor="282.0" AnchorPane.topAnchor="6.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.4000244140625" minWidth="10.0" prefWidth="51.999975585937506" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="177.6" minWidth="10.0" prefWidth="176.0000244140625" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.4000244140625" minWidth="10.0" prefWidth="84.20001220703125" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="177.6" minWidth="10.0" prefWidth="150.39998779296874" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Brush size:" />
-                  <TextField fx:id="txtBrushSize" prefHeight="26.0" prefWidth="134.0" GridPane.columnIndex="1" />
+                  <Label prefHeight="18.0" prefWidth="75.0" text="Brush size:" />
+                  <TextField fx:id="txtBrushSize" prefHeight="26.0" prefWidth="150.0" GridPane.columnIndex="1" />
                   <ColorPicker fx:id="CpColorPicker" GridPane.columnIndex="2" />
                </children>
             </GridPane>
@@ -65,27 +65,27 @@
                         <Insets left="32.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnSpeaker" mnemonicParsing="false" GridPane.rowIndex="2" onAction="#handleSpeaker">
+                  <Button fx:id="btnSpeaker" mnemonicParsing="false" onAction="#handleSpeaker" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="32.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnWifi" mnemonicParsing="false" GridPane.rowIndex="3" onAction="#handleWifi">
+                  <Button fx:id="btnWifi" mnemonicParsing="false" onAction="#handleWifi" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="32.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnCC" mnemonicParsing="false" GridPane.rowIndex="4" onAction="#handleControlCenter">
+                  <Button fx:id="btnCC" mnemonicParsing="false" onAction="#handleControlCenter" GridPane.rowIndex="4">
                      <GridPane.margin>
                         <Insets left="32.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnProjcetor" mnemonicParsing="false" GridPane.rowIndex="5" onAction="#handleProjcetor">
+                  <Button fx:id="btnProjector" mnemonicParsing="false" onAction="#handleProjector" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="32.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnAmp" mnemonicParsing="false" GridPane.rowIndex="6" onAction="#handleAmp">
+                  <Button fx:id="btnAmp" mnemonicParsing="false" onAction="#handleAmp" GridPane.rowIndex="6">
                      <GridPane.margin>
                         <Insets left="32.0" />
                      </GridPane.margin>
