screen size button added to almost all views

--- a/src/GUI/Views/ProjectManagerView.fxml
+++ b/src/GUI/Views/ProjectManagerView.fxml
@@ -52,6 +52,7 @@
                </items>
             </MenuButton>
             <Text fx:id="txtSearchText" layoutX="518.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search for:" wrappingWidth="76.109375" />
+            <Button fx:id="btnScreenSize" layoutX="590.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
          </children>
       </AnchorPane>
    </center>
