--- a/src/GUI/Views/CEOView.fxml
+++ b/src/GUI/Views/CEOView.fxml
@@ -62,6 +62,7 @@
             </MenuButton>
             <Text fx:id="txtSearchText" layoutX="518.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search for:" wrappingWidth="76.109375" />
             <Button fx:id="btnSearch" layoutX="533.4" layoutY="93.0" mnemonicParsing="false" onAction="#handleSearch" prefHeight="26.0" prefWidth="43.0" AnchorPane.rightAnchor="89.0" />
+            <Button fx:id="btnScreenSize" layoutX="590.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
          </children>
       </AnchorPane>
    </center>
